--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -13,7 +13,7 @@ nav#mainNav.navbar.navbar-inverse
           a(href='/docs') Docs
       li 
         p.navbar-text.nav-item
-          a(href='/alarms') Alarms
+          a(href='/viewer') Alarms
       if (loggedIn)
         li
           p.navbar-text.nav-item
