--- a/views/index.pug
+++ b/views/index.pug
@@ -26,6 +26,8 @@ html
             script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha256-KM512VNnjElC30ehFwehXjx1YCHPiQkOPmqnrWtpccM=" crossorigin="anonymous")
             // data tables
             script(src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js")
+            // cascading dropdown
+            script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cascading-dropdown/1.2.9/jquery.cascadingdropdown.min.js")
             // jquery tree
             script(src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js")
 
