--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -5,67 +5,129 @@ block content
         .row
             .col-lg-12.mx-auto
                 h2 Alarm Viewer
+                div#cascade.form-group
+                    .col-lg-4
+                        label.form-label(for='step1') Category
+                        select#step1.form-control(name="category") 
+                    .col-lg-4
+                        label.form-label(for="step2") Subcategory
+                        select#step2.form-control(name="subcategory") 
+                    .col-lg-4
+                        label.form-label(for="step3") Event 
+                        select#step3.form-control(name="event") 
 
-    .gtco-services.gtco-section
-        .col-md-12.col-md-offset-0.text-left
-            table#subscriptions_table.display(style='width:80%')
-                thead
-                    tr
-                        th Category
-                        th Subcategory
-                        th Event
-                        th Tags
-                        th Subscribed
-                each s in subscriptions
-                    tr
-                        td= s.category
-                        td= s.subcategory
-                        td= s.event  
-                        td= s.tags  
-                        td 
-                        //- input( id='vacation' type='checkbox' checked=true )
-                div
+                //- refresh interval refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2C
+                //- filter filters:!(),
+                //- linked:!f
+                //- query:(language:kuery,query:'category:"Networking"')
 
-                button#update_subscriptions_button.btn.btn-primary Update
+                //- iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2066f290-b80f-11eb-89e4-591876ef80c0?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="200" width="800" frameBorder="0")
+                //- div.embed-responsive.embed-responsive-21by9
+                iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))" height="600" width="1000" frameBorder="0" allowfullscreen="true")
 
 block extra_scripts
     script.
-        ( function () {
-            var table = $('#subscriptions_table').DataTable({
-                "paging": false,
-                "searching": true,
-                "aoColumns": [
-                    { "mData": 0, "sWidth": "20%" },
-                    { "mData": 1, "sWidth": "20%" },
-                    { "mData": 2, "sWidth": "20%" },
-                    { "mData": 3, "sWidth": "30%" },
-                    { "mData": 4, "sWidth": "10%" },
-                ]
-            });
-        }());
-
-        ( function () {
-            $('#update_subscriptions_button').click((event) => {
-                event.preventDefault();
-                console.log('Update preferences called');
-
-                const data = {};
-                //- data.vacation = $('#vacation').is(':checked');
-                const toSend=JSON.stringify(data);
-                console.log('toSend',toSend);
-                let jqxhr = $.ajax({
-                type: 'post',
-                url: '/user/subscriptions/#{userId}',
-                contentType: 'application/json',
-                data: toSend,
-                success() {
-                    console.log('success');
-                    window.location.href = '/';
+        const queryString = window.location.search;
+        console.log('query string:',queryString);
+        //- const urlParams = new URLSearchParams(queryString);
+        //- const product = urlParams.get('product')
+        //- console.log(product);
+        
+        $('#cascade').cascadingDropdown({
+            selectBoxes: [
+                {
+                    selector: '#step1',
+                    source: function(request, response) {
+                        $.getJSON('/alarm/categories', request, function(data) {
+                            var first=true;
+                            var uniqueCategories=[];
+                            var seen=[];
+                            $.each(data, function(index,item){
+                                if (seen.includes(item.category)){
+                                    return true;
+                                }
+                                uniqueCategories.push({
+                                    label: item.category,
+                                    value: item.category,
+                                    selected: first
+                                });
+                                seen.push(item.category);
+                                first=false;
+                            });
+                            response(uniqueCategories);
+                        });
+                    }
                 },
-                error(xhr, textStatus, errorThrown) {
-                    alert(`Error code:${xhr.status}.${xhr.responseText}`);
-                    window.location.href = '/';
+                {
+                    selector: '#step2',
+                    requires: ['#step1'],
+                    source: function(request, response) {
+                        $.getJSON('/alarm/categories', request, function(data) {
+                            var first=true;
+                            var uniqueSubCategories=[];
+                            var seen=[];
+                            $.each(data, function(index,item){
+                                if(item.category!==$('#step1').val()){
+                                    return true;
+                                }
+                                if (seen.includes(item.subcategory)){
+                                    return true;
+                                }
+                                uniqueSubCategories.push({
+                                    label: item.subcategory,
+                                    value: item.subcategory,
+                                    selected: first
+                                });
+                                seen.push(item.subcategory);
+                                first=false;
+                            });
+                            response(uniqueSubCategories);
+                        });
+                    }
+                },
+                {
+                    selector: '#step3',
+                    requires: ['#step1', '#step2'],
+                    requireAll: true,
+                    source: function(request, response) {
+                        $.getJSON('/alarm/categories', request, function(data) {
+                            var first=true;
+                            var uniqueEvents=[];
+                            $.each(data, function(index,item){
+                                if(item.category!==$('#step1').val()){
+                                    return true;
+                                }
+                                if(item.subcategory!==$('#step2').val()){
+                                    return true;
+                                }
+                                uniqueEvents.push({
+                                    label: item.event,
+                                    value: item.event,
+                                    selected: first
+                                });
+                                first=false;
+                            });
+                            response(uniqueEvents);
+                        });
+                    },
+                    onChange: function(event, value, requiredValues, requirementsMet){
+                        if (requirementsMet){
+                            const cat=requiredValues.category; 
+                            const subcat=requiredValues.subcategory; 
+                            const eve=value;
+                            console.log(cat, subcat, eve);
+                            src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#"
+                            src+="/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
+                            src+="&_a=(query%3A(language%3Akuery%2Cquery%3A%27"
+                            src+="category%3A%22"+cat+"%22"
+                            src+="%20AND%20subcategory%3A%22"+subcat+"%22"
+                            src+="%20AND%20event%3A%22"+eve+"%22"
+                            src+="%27))"
+                            console.log("src:"+src);
+                            $('#alarmsInTime').attr('src', src);
+                        }
+                    }
                 }
-                });
-            });
-        }());
+            ]
+        });
+      
