--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -4,7 +4,7 @@ block content
     .container 
         .row
             .col-lg-12.mx-auto
-                h2 Alarm Viewer
+                //- h2 Alarm Viewer
                 div#cascade.form-group
                     .col-lg-4
                         label.form-label(for='step1') Category
@@ -17,12 +17,7 @@ block content
                         select#step3.form-control(name="event") 
 
                 //- refresh interval refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2C
-                //- filter filters:!(),
-                //- linked:!f
-                //- query:(language:kuery,query:'category:"Networking"')
-
                 //- iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2066f290-b80f-11eb-89e4-591876ef80c0?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="200" width="800" frameBorder="0")
-                //- div.embed-responsive.embed-responsive-21by9
                 iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))" height="600" width="1000" frameBorder="0" allowfullscreen="true")
 
 block extra_scripts
