--- a/views/docs.pug
+++ b/views/docs.pug
@@ -1,23 +1,268 @@
 extends ./index.pug
 
 block content
-    .container 
-        .row
-            .col-lg-12.mx-auto
+    .container-fluid 
+        .row.flex-xl-nowrap
+
+            .col-12.col-md-3.col-xl-2.bd-toc
+                ul.section-nav
+                    li.toc-entry.toc-h2
+                        a(href="#user") User Documentation
+                        ul 
+                            li.toc-entry.toc-h3
+                                a(href="#registering") Registering Alarm
+                            li.toc-entry.toc-h3
+                                a(href="#creation") Creating Alarm
+                            li.toc-entry.toc-h3
+                                a(href="#periodic") Periodic Execution
+                    
+                    li.toc-entry.toc-h2
+                        a(href="#rest") REST API
+                        ul 
+                            li.toc-entry.toc-h3
+                                a(href="#api_alarm") Alarm
+                                ul
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_categories") Categories
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_register") Register
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_create") Create
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_list") List
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_del_cat") Delete category
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_del_subcat") Delete subcategory
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_alarm_del_event") Delete event
+                            li.toc-entry.toc-h3
+                                a(href="#api_user") User
+                                ul
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_user_view_all") List Users
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_user_view") Info
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_user_delete") Full unsubscribe
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_user_update_preferences") Update preferences
+                                    li.toc-entry.toc-h4 
+                                        a(href="#api_user_update_subscriptions") Update subscriptions
+
+
+            main.col-12.col-md-9.col-xl-8.py-md-3.pl-md-5.bd-content
                 h1 Documentation 
-                h2 Alarms
-                p.lead 
-                | New alarm can be created in three simple steps. First register it using REST API,
-                | add the alarm generating code to your program, create a cron that executes your program periodically. 
-                h3 Registering new alarm 
-                p.lead
-                | To register adsfadsfadf 
-                | adsfasdfasdf 
-                h3 Adding alarm generating code
-                h3 Cron for periodic alarm generation
-                p.lead 
-                | Cre
-                h2 RestAPI documentation
-                p.lead
-                | Please overwrite this.
+
+                h2#user User Documentation
+
+                p.font-weight-normal
+                    | New alarm can be created in three simple steps. First register it using REST API,
+                    | add the alarm generating code to your program, create a cron that executes your program periodically. 
+                
+                h3#registering Registering Alarm
+
+                p.font-weight-normal
+                    | Before registering a new kind of alarm, look at the classification tree of the 
+                    a(href='/alarm/categories') #[strong current alarms]
+                    | 
+                    | and decide if there is already a category and subcategory where the new alarm would naturally fit.
+                    | Once you have decided on catagory and subcategory, you should create a small json document 
+                    | in this form: 
+                    pre 
+                        code.
+                            {
+                                "category": "Analytics",
+                                "subcategory": "Frontier",
+                                "event": "Failed queries",
+                                "description": "Code running every 1h at UC k8s cluster. Checks all servers for: Rejected queries - server is busy and doesn't respond to the query; DB disconnections - the query was processed by the Frontier server but the Oracle DB terminated the connection. The code can be found here: https://github.com/ATLAS-Analytics/AlarmAndAlertService/blob/master/frontier-failed-q.py",
+                                "template": "Servers with failed queries:\n%{servers}\n. Affected tasks: \n%{tasks}\n\tConsult the following link to get a table with the most relevant taskids https://atlas-kibana.mwt2.org:5601/s/frontier/goto/c72d263c3e2b86f394ab99211c99b613\n"
+                            }
+                    | It is really important to write the description field as detailed as possible as that will help people getting alarm know how it got generated.
+                    | The template field defines text that will appear in the alert email. 
+                    | So it should be brief, but give all the information that a person receiving it could judge how serious issue is, shoudl he/she forward it, and have enough information to either act on it, or start digging further into the issue.
+                    | All the instances of %{#[strong variable]} will be changed with values of #[em variable] field given in alarms "source" field. At this moment only simple #[em \n] and #[em \t] are available for formating. 
+                    | Once you have the json alarm description ready, you can simply post it to the Alarm And Alert Service rest
+                    a(href="#api_alarm_register") #[strong endpoint]
+                    | .
+
+                h3#creation Creating Alarm
+                p.font-weight-normal
+                    | Once Alarm has been configured, you may start creating them.
+                    | Alarms are again simple JSON documents, and follow this form:
+                    pre
+                        code.
+                            { 
+                                "category" : "network",
+                                "subcategory": "perfsonar",
+                                "event": "high packet loss",
+                                "tag":"ps.sl",
+                                "body":"ps_1 needs 10000ms",
+                                "source": {
+                                    "src": "137.222.79.1", 
+                                    "avg_value": 1.0, 
+                                    "host_src": "dice-io-37-00.acrc.bris.ac.uk", 
+                                    "site_src": "UKI-SOUTHGRID-BRIS-HEP"
+                                }
+                            }
+                    | In addition to alarm classification, it contains fields: 
+                    ul 
+                        li #[em tag] - a single keyword or a short array that a user can subscribe to. This helps limit number of alerts that a user will receive.  
+                        li #[em body] - a very brief description of the event.
+                        li #[em source] - this optional field is a short map whose attributes will be placed in the alert template. 
+                    | The document should be sent to this
+                    | 
+                    a(href="#api_alarm_create") REST endpoint
+                    | .
+
+                h3#periodic Periodic execution
+
+                h2#rest REST API
+                p.font-weight-normal
+                    | There are two main parts of API. One concerning users, and once concerning alarms. 
+                    | While not in its final form, it is already usable. 
+                
+                h3#api_alarm Alarm
+                p.font-weight-normal
+
+                h4#api_alarm_categories List categories
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong GET] #[em /alarm/categories]
+                    p.font-weight-normal
+                        | returns JSON formated information on all currently registered alarm categories.
+
+                h4#api_alarm_register Registering Alarm
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong POST] #[em /alarm/category]
+                    p.font-weight-normal
+                        | BODY raw(JSON)
+                        pre
+                            code. 
+                                {
+                                    "category": "",
+                                    "subcategory": "",
+                                    "event": "",
+                                    "description": "",
+                                    "template":""
+                                }
+
+                h4#api_alarm_create Creating Alarm
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong POST] #[em /alarm/]
+                    p.font-weight-normal
+                        | BODY raw(JSON)
+                        pre
+                            code. 
+                                {
+                                    "category" : "",
+                                    "subcategory": "",
+                                    "event": "",
+                                    "tag":"",
+                                    "body":"",
+                                    "source": {"xxx": "", "yyy": "", ...}
+                                }
+                    
+                h4#api_alarm_list List Alarms
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong POST] #[em /alarm/fetch]
+                    p.font-weight-normal
+                        | BODY raw(JSON)
+                        pre
+                            code. 
+                                {
+                                    "category" : "",
+                                    "subcategory" : "",
+                                    "event" : "",
+                                    "period" : 6
+                                }              
+
+                h4#api_alarm_del_cat Delete Category
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong DEL] #[em /alarm/:category]
+                    p.font-weight-normal
+                        | Unregisters alarm category and all subcategories and events.
+                        | All alarms created are deleted. Use with caution! 
+
+                h4#api_alarm_del_subcat Delete Subcategory
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong DEL] #[em /alarm/:category/:subcategory]
+                    p.font-weight-normal
+                        | Unregisters alarm subcategory and all events.
+                        | All alarms created are deleted. Use with caution! 
+                               
+                h4#api_alarm_del_event Delete Event
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong DEL] #[em /alarm/:category/:subcategory/:event]
+                    p.font-weight-normal
+                        | Unregisters alarm event.
+                        | All alarms created are deleted. Use with caution! 
+                               
+
+                h3#api_user User
+
+                h4#api_user_view_all All Users Information
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong GET] #[em /user/]
+                    p.font-weight-normal
+                        | returns JSON formated information on all users.
+
+                h4#api_user_view User Information
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong GET] #[em /user/:userId]
+                    p.font-weight-normal
+                        | Returns JSON formated information on a specific user,
+                        | preferences and subscriptions.
+                
+                h4#api_user_delete Full Unsubscribe
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong DEL] #[em /user/:userId]
+                    p.font-weight-normal
+                        | completely deletes a user from system.
             
+                h4#api_user_update_preferences Update User preferences
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong POST] #[em /user/preferences/:userId]
+                    p.font-weight-normal
+                        | BODY raw(JSON)
+                        pre
+                            code. 
+                                {
+                                    "vacation" : true
+                                }
+                    p.font-weight-normal
+                        | Updates user preferences. 
+                        | Only preferences supported by the deployed system are allowed.
+               
+                h4#api_user_update_subscriptions Update subscriptions
+                div(style="margin:20px;")
+                    p.font-weight-normal
+                        | #[strong POST] #[em /user/subscriptions/:userId]
+                    p.font-weight-normal
+                        | BODY raw(JSON)
+                        pre
+                            code. 
+                                [
+                                    {
+                                        "category": "",
+                                        "subcategory": "",
+                                        "event": "",
+                                        "tags": ["xxx","yyy"]
+                                    },
+                                    ...
+                                ]
+                            
+                    p.font-weight-normal
+                        | Updates user subscriptions. 
+                        | Body has JSON array of all alarms user will be subscribed.
+                        | Only alarms currently configured in the system are allowed.
