devs and cleanup

--- a/views/subscriptions.pug
+++ b/views/subscriptions.pug
@@ -6,48 +6,57 @@ block content
             .col-lg-5.mx-auto
                 h2 Alarms
                 div(id="SimpleJSTree")
+                br
                 button#jstree_button.btn.btn-primary Update Selected Alarms
 
-            .col-lg-6.mx-auto
+            .col-lg-7.mx-auto
                 h2 Details
                 div(id="description")
                     h5 Hover over an Event to Have its Description Appear Here
                 br
-        br
-        br
-        br
+                br
+                h2 Current Subscriptions
+                table#subscriptions_table.display(style='width:100%')
+                br
+                br
+                button#dtButton.btn.btn-primary Update Tags Selections
         br
         div(id='deletedsub')
-        h2 My Current Subscriptions
-        table#subscriptions_table.display(style='width:80%')
-            thead
-                tr
-                    th Category
-                    th Subcategory
-                    th Event
-            each s in subscriptions
-                tr
-                    td= s.category
-                    td= s.subcategory
-                    td= s.event  
-            div
 
+         
 block extra_scripts
     script.
-        ( function () {
-            var table = $('#subscriptions_table').DataTable({
-                "paging": false,
-                "searching": false,
-                "aoColumns": [
-                    { "mData": 0, "sWidth": "20%" },
-                    { "mData": 1, "sWidth": "20%" },
-                    { "mData": 2, "sWidth": "20%" },
-                ]
-            });
-        }());
 
         var catdata = !{JSON.stringify(categories)};
-        var subdata = !{JSON.stringify(subscriptions)}
+        var subdata = !{JSON.stringify(subscriptions)};
+
+        ( function () {
+            var table = $('#subscriptions_table').DataTable({
+                "data": subdata,
+                "paging": false,
+                "searching": false,
+                "columns": [
+                    {title:"Category", data: "category"},
+                    {title:"Subcategory", data: "subcategory"},
+                    {title:"Event", data: 'event'},
+                    {title:"Tags", data: 'tags',
+                        render: function (data, type, row) {
+                                //- console.log('data:',data,'row:',row );
+                                if (row.tags === undefined){row.tags = '*';}
+                                return '<input class="form-control tagInput" name="Tags" type="text" value = ' + row.tags + ' >';
+                            }
+                    },
+                ],
+                "drawCallback": function( settings ) {
+                  $(".tagInput").on("change",function(){
+                       var $row = $(this).parents("tr");
+                       var rowData = table.row($row).data();
+                       rowData.tags = $(this).val();
+                       console.log('row changed', rowData);
+                  })
+                },
+            });
+        }());
 
         for (i=0; i<subdata.length; i++) {
             for (j=0; j<catdata.length; j++) {
@@ -58,10 +67,8 @@ block extra_scripts
                 }
             }
         }
-        console.log(subdata)
-        for (i=0; i<subdata.length; i++) {
-            subdata[i] = {"category":subdata[i].category,"subcategory":subdata[i].subcategory,"event":subdata[i].event};
-        }
+        console.log("subdata:", subdata)
+
         treedata = []
         for (i=0; i<catdata.length; i++) {
             treedata.push({"id":catdata[i].category,"parent":"#","text":catdata[i].category});
@@ -104,61 +111,48 @@ block extra_scripts
         //console.log('rendered subscriptions data',subdata);
         //console.log('rendered categories data',catdata);
         //console.log('test jstree data',treedata);
-        $(function () {
-            $('#SimpleJSTree').jstree({
-                core: {
-                    themes: {
-                        variant: "large"
-                    },
-                    data: treedata
-                },
-                plugins: ["checkbox"]
-            });
-            $('#SimpleJSTree').on("changed.jstree", function (e, data) {
-                console.log(data);
-                
-            });
-            $('#SimpleJSTree').bind("hover_node.jstree", function(e, data) {
-                //console.log(data.node.data);
-                if (data.node.children.length === 0) {
-                    var desc = document.getElementById('description')
-                    desc.innerHTML = "";
-                    desc.innerHTML = data.node.data;
-                };
-            });          
-        });    
 
-        console.log(catdata)
+        $('#SimpleJSTree').jstree({
+            core: {
+                themes: {
+                    variant: "large"
+                },
+                data: treedata
+            },    
+            plugins: ["checkbox"]
+        });
+        $('#SimpleJSTree').on("changed.jstree", function (e, data) {
+            console.log(data);
+        });
+        $('#SimpleJSTree').bind("hover_node.jstree", function(e, data) {
+            //console.log(data.node.data);
+            if (data.node.children.length === 0) {
+                var desc = document.getElementById('description')
+                desc.innerHTML = "";
+                desc.innerHTML = data.node.data;
+            };
+        });       
+
+        console.log("Categories:", catdata);
 
         $('#jstree_button').click((event) => {
-            //console.log(subdata)
             subdata = []
             event.preventDefault();
-            //console.log('Update preferences called');
             var checked_ids = [];
             checked_ids = $('#SimpleJSTree').jstree("get_selected",true)
-            //console.log(checked_ids);
 
-            //console.log(treedata)
-            var final = []
             for (i=0; i<checked_ids.length; i++) {
                 if (checked_ids[i].children.length ==0) {
                     for (j=0; j<catdata.length; j++) {
                         if (checked_ids[i].text == catdata[j].event) {
                             if (checked_ids[i].parents[1] == catdata[j].category) {
-                                final.push(catdata[j])
-                                //console.log(catdata[j])
+                                subdata.push(catdata[j])
                             }
                         }
                     }
                 }
             };
             
-            for (i=0; i<final.length; i++) {
-                final[i] = {'category': final[i].category,'subcategory': final[i].subcategory,'event': final[i].event}
-                //console.log(final[i])
-                subdata.push(final[i])
-            };
             console.log(subdata)
         
             var toSend = JSON.stringify(subdata)
@@ -180,4 +174,23 @@ block extra_scripts
             })
             setTimeout(location.reload.bind(location), 300);
 
+        });
+
+        
+        $('#dtButton').click((event) => {
+            subdata=$('#subscriptions_table').DataTable().data().toArray();
+            toSend=JSON.stringify(subdata);
+            let jqxhr = $.ajax({
+                type: 'post',
+                url: '/user/subscriptions/#{userId}',
+                contentType: 'application/json',
+                data: toSend,
+                success() {
+                    console.log('success');
+                },
+                error(xhr, textStatus, errorThrown) {
+                    alert(`Error Code::${xhr.status}.${xhr.responseText}`);
+                }
+            })
+            setTimeout(location.reload.bind(location), 300);
         });
