--- a/views/index.pug
+++ b/views/index.pug
@@ -24,6 +24,8 @@ html
                             dd Globus InCommon
                             dt Authorization 
                             dd API key
+                            dt Mail
+                            dd Mailgun
                         iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2513afb0-28de-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-1d%2Cto%3Anow))" height="300" width="400" frameBorder="0")
 
                     .col-lg-6.mx-auto
